tooling/nargo_cli/tests/snapshots/execution_failure/regression_bitshift_normalization/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion is always false: attempt to bit-shift with overflow
  ┌─ src/main.nr:4:18
  │
4 │             if ((1_u8 >> idx_c) == idx_d) {} else {};
  │                  ------------- As a result, the compiled circuit is ensured to fail. Other assertions may also fail during execution
  │
  = Call stack:
    1: main
            at src/main.nr:4:18

Aborting due to 1 previous error
